--- a/html/_/index.html
+++ b/html/_/index.html
@@ -296,7 +296,7 @@ crossorigin=""/>
     <div class="row">
       <!--1ère colonne-->
     <div class="col-xs-12 col-sm-12 col-lg-5 panelcontent">
-      <p>
+      <div>
         <h2 class="item d-inline">
           <span lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</span>
           <span lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</span>
@@ -304,8 +304,8 @@ crossorigin=""/>
         <h3 class="textitem d-inline">
           <span id="modalbody-tenue"></span>
         </h3>
-      </p>
-      <p>
+      </div>
+      <div>
         <h2 class="item d-inline">
           <span lang="fr">Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </span>
           <span lang="en">Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </span>
@@ -313,7 +313,7 @@ crossorigin=""/>
         <h3 class="textitem d-inline">
           <span id="modalbody-price" ></span>
         </h3>
-      </p>
+      </div>
       <p>
         <h2 class="item d-inline">
           <span lang="fr">Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</span>
