--- a/html/_/index.html
+++ b/html/_/index.html
@@ -455,7 +455,7 @@ crossorigin=""/>
             <span lang="en">Chemotypes <sup class="fas fa-question-circle iconetab" title="Other species and varieties characteristics for the studied plant."></sup> :</span>
           </h2>
           <br>
-          <h3 class="textitem d-inline">
+          <h3 class="textitem2 d-inline">
             <span id="modalbody-chemotype"></span>
           </h3>
         </p>
@@ -464,7 +464,7 @@ crossorigin=""/>
             <span lang="fr">Médecine alternative <sup class="fas fa-question-circle iconetab" title="Usages en aromathérapie, phytothérapie ou olfactothérapie."></sup> :</span>
             <span lang="en">Aromatherapy <sup class="fas fa-question-circle iconetab" title="Aromatherapy, phytotherapy and olfactotherapy usage."></sup> :</span>
           </h2>
-          <h3 class="textitem d-inline">
+          <h3 class="textitem2 d-inline">
             <span id="modalbody-medecine"></span>
           </h3>
         </p>
