--- a/html/_/index.html
+++ b/html/_/index.html
@@ -329,7 +329,7 @@ crossorigin=""/>
           <span lang="en">Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</span>
         </h2>
         <br>
-        <h3 class="textitem">
+        <h3 class="textitem2 d-inline">
           <span id="modalbody-componat"></span>
         </h3>
       </p>
@@ -384,15 +384,15 @@ crossorigin=""/>
         </div>
         <div class="row"> 
           <div class="col-12">
-          <h2 class="item d-inline">
-            <span lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</span>
-            <span lang="en">Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</span>
-          </h2>
-          <h3 class="textitem d-inline">
-            <span id="modalbody-stab" class="textitem"></span>
-          </h3>
+            <h2 class="item d-inline">
+              <span lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</span>
+              <span lang="en">Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</span>
+            </h2>
+            <h3 class="textitem d-inline">
+              <span id="modalbody-stab" class="textitem"></span>
+            </h3>
+          </div>
         </div>
-    </div>
     </div>
     </div><!--Fin row-->
   </div><!--Fin container-->
