--- a/html/_/index.html
+++ b/html/_/index.html
@@ -17,8 +17,8 @@
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-<!-- splide carousel -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.2.3/dist/css/splide.min.css">
+<!-- glide carousel -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
 
 <!-- Fichier Style CSS -->
 <link href="../css/style.css" rel="stylesheet" />
@@ -967,6 +967,7 @@ crossorigin=""/>
 
 <div class="modal-footer">
   <div class="container-fluid">
+   <div class="row">  
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
       <p class="textitem-footer">
         <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
@@ -974,7 +975,8 @@ crossorigin=""/>
       </p>
     </div>
     <div class="pro_informations col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"></div>
-  </div>
+   </div>
+   </div>
 </div> <!--fin footer-->
 
 </div> <!--fin content-->
@@ -1802,8 +1804,8 @@ crossorigin=""/>
 integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
 crossorigin=""></script>
 
-<!-- splide carousel -->
-<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.2.3/dist/js/splide.min.js"></script>
+<!-- glide carousel -->
+<script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
 
 <script src="../js/main.js"></script>
 
