--- a/html/_/index.html
+++ b/html/_/index.html
@@ -366,7 +366,7 @@ crossorigin=""/>
           </div>
           <div id="modalbody-pict" class="imgmp offset-1 col-4 order-first order-sm-first order-lg-last"></div>
         </div>
-        <div class="row"> 
+        <div class="row mt-5"> 
           <div class="col-12">
             <h2 class="item d-inline">
               <span lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</span>
