--- a/html/_/index.html
+++ b/html/_/index.html
@@ -365,7 +365,7 @@ crossorigin=""/>
             </p>
           </div>
           <div class="col-xs-12 col-sm-12 col-lg-5" style="background-color: blue;">
-            <div id="modalbody-pict" class="imgmp offset-1 col-4 order-first order-sm-first order-lg-last"></div>
+            <span id="modalbody-pict" class="imgmp order-first order-sm-first order-lg-last"></span>
           </div>
         </div>
         <div class="row mt-3"> 
