--- a/html/_/index.html
+++ b/html/_/index.html
@@ -365,7 +365,7 @@ crossorigin=""/>
             </p>
           </div>
           <div class="col-xs-12 col-sm-12 col-lg-5" style="background-color: blue;">
-            <span id="modalbody-pict1" class="imgmp order-first order-sm-first order-lg-last" style="background-color: yellow;"></span>
+            <span id="modalbody-pic" class="imgmp order-first order-sm-first order-lg-last" style="background-color: yellow;"></span>
           </div>
         </div>
         <div class="row mt-3"> 
