--- a/html/_/index.html
+++ b/html/_/index.html
@@ -364,8 +364,8 @@ crossorigin=""/>
               </h3>
             </p>
           </div>
-          <div class="col-xs-12 col-sm-12 col-lg-5" style="background-color: blue;">
-            <span id="modalbody-pic" class="imgmp order-first order-sm-first order-lg-last" style="background-color: yellow;"></span>
+          <div class="col-xs-12 col-sm-12 col-lg-5" style="background-color: blue; align-items: center;">
+            <span id="modalbody-pict" class="imgmp order-first order-sm-first order-lg-last"></span>
           </div>
         </div>
         <div class="row mt-3"> 
