--- a/html/_/index.html
+++ b/html/_/index.html
@@ -365,7 +365,7 @@ crossorigin=""/>
             </p>
           </div>
           <div class="col-xs-12 col-sm-12 col-lg-5" style="background-color: blue; align-items: center;">
-            <span id="modalbody-pict" class="imgmp order-first order-sm-first order-lg-last"></span>
+            <span id="modalbody-pict" class="imgmp "></span> <!--order-first order-sm-first order-lg-last-->
           </div>
         </div>
         <div class="row mt-3"> 
