--- a/html/_/index.html
+++ b/html/_/index.html
@@ -364,7 +364,7 @@ crossorigin=""/>
               </h3>
             </p>
           </div>
-          <div class="col-xs-12 col-sm-12 col-lg-5" style="background-color: blue; align-items: center;">
+          <div class="row col-xs-12 col-sm-12 col-lg-5" style="background-color: blue; align-items: center;">
             <span id="modalbody-pict" class="imgmp "></span> <!--order-first order-sm-first order-lg-last-->
           </div>
         </div>
