--- a/html/_/index.html
+++ b/html/_/index.html
@@ -295,7 +295,7 @@ crossorigin=""/>
   <div class="container-fluid">
     <div class="row">
       <!--1ère colonne-->
-    <div class="col-xs-12 col-sm-12 col-lg-5 panelcontent">
+    <div class="col-xs-12 col-sm-12 col-lg-5 mb-0 panelcontent">
       <p>
         <h2 class="item d-inline">
           <span lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</span>
@@ -337,7 +337,7 @@ crossorigin=""/>
       <!--2ème colonne-->
     <div class="col-xs-12 col-sm-12 col-lg-7 panelcontent">
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-lg-7">
+          <div class="col-xs-12 col-sm-12 col-lg-7 mt-0">
             <p>
               <h2 class="item d-inline">
                 <span lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</span>
@@ -365,7 +365,7 @@ crossorigin=""/>
             </p>
           </div>
           <div class="row col-xs-12 col-sm-12 col-lg-5" style="background-color: blue; align-items: center;">
-            <span id="modalbody-pict" class="imgmp "></span> <!--order-first order-sm-first order-lg-last-->
+            <span id="modalbody-pict" class="imgmp"></span> <!--order-first order-sm-first order-lg-last-->
           </div>
         </div>
         <div class="row mt-3"> 
