--- a/html/_/index.html
+++ b/html/_/index.html
@@ -364,8 +364,10 @@ crossorigin=""/>
               </h3>
             </p>
           </div>
-          <div class="row col-xs-12 col-sm-12 col-lg-6" style="background-color: blue; text-align: center;">
-            <span id="modalbody-pict" class="imgmp"></span> <!--order-first order-sm-first order-lg-last-->
+          <div class="row col-xs-12 col-sm-12 col-lg-6" style="background-color: blue;">
+            <p style="text-align: center;">
+              <span id="modalbody-pict" class="imgmp"></span> <!--order-first order-sm-first order-lg-last-->
+            </p>
           </div>
         </div>
         <div class="row mt-3"> 
