--- a/html/_/index.html
+++ b/html/_/index.html
@@ -366,7 +366,7 @@ crossorigin=""/>
           </div>
           <div class="row col-xs-12 col-sm-12 col-lg-6" style="background-color: blue;">
             <p style="text-align: center;">
-              <span id="modalbody-pict" class="imgmp"></span> <!--order-first order-sm-first order-lg-last-->
+              <span id="modalbody-pict" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
             </p>
           </div>
         </div>
