--- a/html/_/index.html
+++ b/html/_/index.html
@@ -364,10 +364,8 @@ crossorigin=""/>
               </h3>
             </p>
           </div>
-          <div class="row col-xs-12 col-sm-12 col-lg-6" style="background-color: blue;">
-            <p style="text-align: center;">
+          <div class="row col-xs-12 col-sm-12 col-lg-6 blockimg" style="background-color: blue;">
               <span id="modalbody-pict" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
-            </p>
           </div>
         </div>
         <div class="row mt-3"> 
