--- a/html/_/index.html
+++ b/html/_/index.html
@@ -364,7 +364,7 @@ crossorigin=""/>
               </h3>
             </p>
           </div>
-          <div class="row col-xs-12 col-sm-12 col-lg-6 blockimg" style="background-color: blue;">
+          <div class="row col-xs-12 col-sm-12 col-lg-6 blockimg">
               <span id="modalbody-pict" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
           </div>
         </div>
@@ -419,10 +419,13 @@ crossorigin=""/>
           </h3>
         </p> 
       </div>
-      <!-- Colonne Image-->
+      <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg">
+              <span id="modalbody-pictA" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
+      </div>
+      <!-- Colonne Image
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 text-center order-first order-sm-first order-lg-last" style="text-align: center; vertical-align: middle;">
         <div id="modalbody-pictA" class="imgmp col-12 text-center" style="text-align: center; vertical-align: middle;"></div>
-      </div>
+      </div>-->
     </div>
     <div class="row">
       <div class="col-12 mt-0">
