--- a/html/_/index.html
+++ b/html/_/index.html
@@ -422,10 +422,6 @@ crossorigin=""/>
       <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg">
               <span id="modalbody-pictA" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
       </div>
-      <!-- Colonne Image
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 text-center order-first order-sm-first order-lg-last" style="text-align: center; vertical-align: middle;">
-        <div id="modalbody-pictA" class="imgmp col-12 text-center" style="text-align: center; vertical-align: middle;"></div>
-      </div>-->
     </div>
     <div class="row">
       <div class="col-12 mt-0">
@@ -1093,7 +1089,7 @@ crossorigin=""/>
       <div class="container-fluid">
         <div class="row">
           <!--1ère colonne-->
-          <div class="col-12 col-sm-12 col-lg-6 panel-content">
+          <div class="col-12 col-sm-12 col-lg-5 panel-content">
             <p>
               <h2 class="item d-inline">
                 <span lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</span>
@@ -1173,7 +1169,7 @@ crossorigin=""/>
             </p>
           </div>
             <!--2ème colonne-->
-          <div class="col-12 col-sm-12 col-lg-4">
+          <div class="col-12 col-sm-12 col-lg-5">
             <p>
               <h2 class="item d-inline">
                 <span lang="fr">Densité <sup class="fas fa-question-circle iconetab" title="Donnée, sans unité, mettant en relation la masse pour un volume donné de matière première (d = 1,5 veut dire que 1 mL = 1,5 g)."></sup> :</span>
@@ -1238,7 +1234,9 @@ crossorigin=""/>
               </h3>
             </p>
           </div>
-          <div id="modalbody-pict1" class="imgmp col-12 col-sm-12 col-lg-2 order-first order-sm-first order-lg-last"></div>
+          <div class="row col-xs-12 col-sm-12 col-lg-2 blockimg">
+              <span id="modalbody-pictA" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
+          </div>
         </div>
       </div>
     </div>
