--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1293,7 +1293,9 @@ crossorigin=""/>
               </h3>
             </p>
           </div>
-          <div id="modalbody-pict1A" class="imgmp  col-12 col-sm-12 col-md-12 col-lg-3  order-first order-sm-first order-lg-last"></div>
+          <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg">
+              <span id="modalbody-pict1A" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
+          </div>
         </div>
       </div>
     </div>
