--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1089,7 +1089,7 @@ crossorigin=""/>
       <div class="container-fluid">
         <div class="row">
           <!--1ère colonne-->
-          <div class="col-12 col-sm-12 offset-lg-1 col-lg-4 panel-content">
+          <div class="col-12 col-sm-12 offset-md-1 col-lg-4 panel-content">
             <p>
               <h2 class="item d-inline">
                 <span lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</span>
