--- a/html/_/index.html
+++ b/html/_/index.html
@@ -295,83 +295,81 @@ crossorigin=""/>
   <div class="container-fluid">
     <div class="row">
       <!--1ère colonne-->
-    <div class="col-xs-12 col-sm-12 col-lg-5 mb-0 panelcontent">
-      <p>
-        <h2 class="item d-inline">
-          <span lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</span>
-          <span lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</span>
-        </h2>
-        <h3 class="textitem d-inline">
-          <span id="modalbody-tenue"></span>
-        </h3>
-      </p>
-      <p>
-        <h2 class="item d-inline">
-          <span lang="fr">Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </span>
-          <span lang="en">Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </span>
-        </h2>
-        <h3 class="textitem d-inline">
-          <span id="modalbody-price" ></span>
-        </h3>
-      </p>
-      <p>
-        <h2 class="item d-inline">
-          <span lang="fr">Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</span>
-          <span lang="en">Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</span>
-        </h2>
-        <h3 class="textitem d-inline">
-          <span id="modalbody-aspect"></span>
-        </h3>
-      </p>
-      <p>
-        <h2 class="item d-inline">
-          <span lang="fr">Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</span>
-          <span lang="en">Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</span>
-        </h2>
-        <br>
-        <h3 class="textitem2 d-inline">
-          <span id="modalbody-componat"></span>
-        </h3>
-      </p>
-    </div>
-      <!--2ème colonne-->
-    <div class="col-xs-12 col-sm-12 col-lg-7 panelcontent">
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-lg-6 mt-0">
-            <p>
-              <h2 class="item d-inline">
-                <span lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</span>
-                <span lang="en">CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</span>
-              </h2>
-              <h3 class="textitem d-inline">
-                <span id="modalbody-cas"></span>
-              </h3>
-            </p>
-            <p>
-              <h2 class="item d-inline">
-                <span lang="fr">N° EINECS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification de la matière première dans l'Inventaire Européen des Substances chimiques Commerciales Existantes."></sup> :</span>
-                <span lang="en">EINECS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the European INventory of Existing Commercial chemical Substances."></sup> :</span>
-              </h2>
-              <h3 class="textitem d-inline">
-                <span id="modalbody-einecs" ></span>
-              </h3>
-            </p>
-            <p>
-              <h2 class="item d-inline">
-                <span lang="fr">N° FEMA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première au sein de la base de données Flavor Extract Manufacturers Association"></sup> :</span>
-                <span lang="en">FEMA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the Flavor Extract Manufacturers Association."></sup> :</span>
-              </h2>
-              <h3 class="textitem d-inline">
-                <span id="modalbody-fema" ></span>
-              </h3>
-            </p>
-          </div>
-          <div class="row col-xs-12 col-sm-12 col-lg-6 blockimg">
+    <div class="col-xs-12 col-sm-12 col-lg-12 m-0 p-0 panelcontent">
+      <div class="col-xs-12 col-sm-12 col-lg-4 mb-0">
+        <p>
+          <h2 class="item d-inline">
+            <span lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</span>
+            <span lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</span>
+          </h2>
+          <h3 class="textitem d-inline">
+            <span id="modalbody-tenue"></span>
+          </h3>
+        </p>
+        <p>
+          <h2 class="item d-inline">
+            <span lang="fr">Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </span>
+            <span lang="en">Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </span>
+          </h2>
+          <h3 class="textitem d-inline">
+            <span id="modalbody-price" ></span>
+          </h3>
+        </p>
+        <p>
+          <h2 class="item d-inline">
+            <span lang="fr">Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</span>
+            <span lang="en">Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</span>
+          </h2>
+          <h3 class="textitem d-inline">
+            <span id="modalbody-aspect"></span>
+          </h3>
+        </p>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-lg-5 mt-0">
+        <p>
+          <h2 class="item d-inline">
+            <span lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</span>
+            <span lang="en">CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</span>
+          </h2>
+          <h3 class="textitem d-inline">
+            <span id="modalbody-cas"></span>
+          </h3>
+        </p>
+        <p>
+          <h2 class="item d-inline">
+            <span lang="fr">N° EINECS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification de la matière première dans l'Inventaire Européen des Substances chimiques Commerciales Existantes."></sup> :</span>
+            <span lang="en">EINECS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the European INventory of Existing Commercial chemical Substances."></sup> :</span>
+          </h2>
+          <h3 class="textitem d-inline">
+            <span id="modalbody-einecs" ></span>
+          </h3>
+        </p>
+        <p>
+          <h2 class="item d-inline">
+            <span lang="fr">N° FEMA <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première au sein de la base de données Flavor Extract Manufacturers Association"></sup> :</span>
+            <span lang="en">FEMA number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material in the Flavor Extract Manufacturers Association."></sup> :</span>
+          </h2>
+          <h3 class="textitem d-inline">
+            <span id="modalbody-fema" ></span>
+          </h3>
+        </p>
+      </div>
+      <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg">
               <span id="modalbody-pict" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
-          </div>
-        </div>
-        <div class="row mt-3"> 
+      </div>
+    </div>
+      <!--2ème ligne-->
+    <div class="col-xs-12 col-sm-12 col-lg-12 panelcontent">
+        <div class="row">
           <div class="col-12">
+            <h2 class="item d-inline">
+              <span lang="fr">Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</span>
+              <span lang="en">Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</span>
+            </h2>
+            <br>
+            <h3 class="textitem2 d-inline">
+              <span id="modalbody-componat"></span>
+            </h3>
             <h2 class="item d-inline">
               <span lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</span>
               <span lang="en">Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</span>
