--- a/html/_/index.html
+++ b/html/_/index.html
@@ -296,7 +296,8 @@ crossorigin=""/>
     <div class="row">
       <!--1ère colonne-->
     <div class="col-xs-12 col-sm-12 col-lg-12 m-0 p-0 panelcontent">
-      <div class="col-xs-12 col-sm-12 col-lg-4 mb-0">
+      <div class="row">
+      <div class="col-xs-12 col-sm-12 col-lg-4 mb-0 d-inline">
         <p>
           <h2 class="item d-inline">
             <span lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</span>
@@ -325,7 +326,7 @@ crossorigin=""/>
           </h3>
         </p>
       </div>
-      <div class="col-xs-12 col-sm-12 col-lg-5 mt-0">
+      <div class="col-xs-12 col-sm-12 col-lg-5 mt-0 d-inline">
         <p>
           <h2 class="item d-inline">
             <span lang="fr">N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</span>
@@ -354,9 +355,10 @@ crossorigin=""/>
           </h3>
         </p>
       </div>
-      <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg">
+      <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg d-inline">
               <span id="modalbody-pict" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
       </div>
+      <!-- < -->
     </div>
       <!--2ème ligne-->
     <div class="col-xs-12 col-sm-12 col-lg-12 panelcontent">
