--- a/html/_/index.html
+++ b/html/_/index.html
@@ -296,7 +296,6 @@ crossorigin=""/>
     <div class="row">
       <!--1ère colonne-->
     <div class="col-xs-12 col-sm-12 col-lg-12 m-0 p-0 panelcontent">
-      <div class="row">
       <div class="col-xs-12 col-sm-12 col-lg-4 mb-0 d-inline">
         <p>
           <h2 class="item d-inline">
@@ -358,12 +357,9 @@ crossorigin=""/>
       <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg d-inline">
               <span id="modalbody-pict" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
       </div>
-      <!-- < -->
-    </div>
       <!--2ème ligne-->
     <div class="col-xs-12 col-sm-12 col-lg-12 panelcontent">
-        <div class="row">
-          <div class="col-12">
+        <div class="col-xs-12 col-sm-12 col-lg-4 mb-0 d-inline">
             <h2 class="item d-inline">
               <span lang="fr">Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</span>
               <span lang="en">Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</span>
@@ -372,6 +368,8 @@ crossorigin=""/>
             <h3 class="textitem2 d-inline">
               <span id="modalbody-componat"></span>
             </h3>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-lg-7 mb-0 d-inline">
             <h2 class="item d-inline">
               <span lang="fr">Stabilité <sup class="fas fa-question-circle iconetab" title="Comportement de la matière première sous des conditions de haute température, de lumière, et en bases fonctionnelles diverses."></sup> :</span>
               <span lang="en">Stability <sup class="fas fa-question-circle iconetab" title="Aspect, color, odor and molecular changes according to the conditions imposed to the raw material."></sup> :</span>
@@ -380,8 +378,8 @@ crossorigin=""/>
               <span id="modalbody-stab" class="textitem"></span>
             </h3>
           </div>
-        </div>
     </div>
+  </div>
     </div><!--Fin row-->
   </div><!--Fin container-->
 </div><!--Fin panel content-->
