--- a/html/_/index.html
+++ b/html/_/index.html
@@ -181,7 +181,7 @@ crossorigin=""/>
 </div>
 </div>
 
-
+</main>
 
 
 <!-- MODAL DESCRIPTEURS -->
@@ -957,7 +957,6 @@ crossorigin=""/>
 </div>
 
 
-
 </div> <!--fin panel-content-->
 </div> <!--fin panel-body-->
 </div>  <!--fin body-->
@@ -974,6 +973,7 @@ crossorigin=""/>
     <div class="pro_informations col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"></div>
    </div>
    </div>
+
 </div> <!--fin footer-->
 
 </div> <!--fin content-->
@@ -1767,22 +1767,21 @@ crossorigin=""/>
   </div>
   <div class="modal-footer">
       <div class="container-fluid">
+       <div class="row">
         <div class="col-12 text-center">
           <p class="textitem-footer m-0 p-0">
             <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
             <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
           </p>
         </div>
-       <div class="pro_informations col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"></div>
+           <div class="pro_informations col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"></div>
+      </div>>
       </div>
   </div> <!--fin footer-->
 </div> <!-- fin content -->
 </div> <!-- fin container -->
 </div> 
 </div> <!-- fin synthetique -->
-
-
-</main>
 
 
 
