--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1775,7 +1775,7 @@ crossorigin=""/>
           </p>
         </div>
            <div class="pro_informations col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"></div>
-      </div>>
+      </div>
       </div>
   </div> <!--fin footer-->
 </div> <!-- fin content -->
