first attempt for the slider carousel

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -18,6 +18,8 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <!-- Fichier Style CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.2.3/dist/css/splide-core.min.css">
+
 <link href="../css/style.css" rel="stylesheet" />
 
 <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" />
@@ -1784,10 +1786,11 @@ crossorigin=""/>
 </div> <!-- fin synthetique -->
 
 
-
 <!--############################################### -->
 <!--############## PARTIE JAVASCRIPT ############## --> 
 <!--############################################### -->
+
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.2.3/dist/js/splide.min.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 
