--- a/html/_/index.html
+++ b/html/_/index.html
@@ -13,12 +13,14 @@
 <title lang="en">ScenTree - The new collaborative perfumery ingredients classification</title>
 <!--Description Google-->
 <meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.2.3/dist/css/splide-core.min.css">
+
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <!-- Fichier Style CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.2.3/dist/css/splide-core.min.css">
 
 <link href="../css/style.css" rel="stylesheet" />
 
@@ -29,6 +31,8 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
 integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
 crossorigin=""/>
+
+<link rel="stylesheet" href="../node_modules/@glidejs/glide/dist/css/glide.core.min.css">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -1790,8 +1794,6 @@ crossorigin=""/>
 <!--############## PARTIE JAVASCRIPT ############## --> 
 <!--############################################### -->
 
-<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.2.3/dist/js/splide.min.js"></script>
-
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 
 <script   src="https://code.jquery.com/jquery-3.4.1.min.js"   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="   crossorigin="anonymous"></script>
@@ -1802,6 +1804,8 @@ crossorigin=""/>
 <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
 integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
 crossorigin=""></script>
+
+<script src="../node_modules/@glidejs/glide/dist/glide.min.js"></script>
 
 <script src="../js/main.js"></script>
 
