--- a/html/_/video.html
+++ b/html/_/video.html
@@ -41,7 +41,7 @@ crossorigin=""/>
         <h1 class="text-center modal-title modal-title1">Découvrir ScenTree</h1>
         <br>
         <div class="row col-12 text-center">
-          <h2 class="text-justify" style="font-size: 14px;">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
+          <h2 class="text-justify headermodalvideo">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
         </div>
       </div>
       <div class="modal-body2">
