--- a/html/_/video.html
+++ b/html/_/video.html
@@ -38,7 +38,7 @@ crossorigin=""/>
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="closevideo"><span aria-hidden="true">&times;</span></button>
-        <h1 class="text-center modal-title modal-title1">Découvrir ScenTree</h1>
+        <h1 class="col-12 text-center modal-title modal-title1">Découvrir ScenTree</h1>
         <br>
         <div class="row col-12 text-center">
           <h2 class="text-justify headermodalvideo">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
