--- a/html/_/video.html
+++ b/html/_/video.html
@@ -36,9 +36,9 @@ crossorigin=""/>
 <div class="modal fade in  my-modal show_modal_at_start go_to_main_page_after_closing_modal" tabindex="-1" role="dialog" id="Vidéo">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header" style="background-color: blue;">
         <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="closevideo"><span aria-hidden="true">&times;</span></button>
-        <div class="col-12 text-center">
+        <div class="col-12 text-center" style="background-color: red;">
           <h1 class="modal-title modal-title1">Découvrir ScenTree</h1>
         </div>
         <div class="col-12 text-center">
