--- a/html/_/video.html
+++ b/html/_/video.html
@@ -38,11 +38,13 @@ crossorigin=""/>
     <div class="modal-content">
       <div class="modal-header" style="background-color: blue;">
         <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="closevideo"><span aria-hidden="true">&times;</span></button>
-        <div class="col-12 text-center" style="background-color: red;">
-          <h1 class="modal-title modal-title1">Découvrir ScenTree</h1>
-        </div>
-        <div class="col-12 text-center">
-          <h2 class="text-justify headermodalvideo">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
+        <div class="row">
+          <div class="col-12 text-center" style="background-color: red;">
+            <h1 class="modal-title modal-title1">Découvrir ScenTree</h1>
+          </div>
+          <div class="col-12 text-center">
+            <h2 class="text-justify headermodalvideo">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
+          </div>
         </div>
       </div>
       <div class="modal-body2">
