--- a/html/_/video.html
+++ b/html/_/video.html
@@ -40,9 +40,8 @@ crossorigin=""/>
         <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="closevideo"><span aria-hidden="true">&times;</span></button>
         <div class="row">
           <div class="col-12 text-center" style="background-color: red;">
-            <h1 class="modal-title">Découvrir ScenTree</h1>
-            
-            <h2 class="text-justify headermodalvideo">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
+            <h1 class="titlemodalvideo">Découvrir ScenTree</h1>
+            <h2 class="text-justify titlemodalvideo2">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
           </div>
         </div>
       </div>
