--- a/html/_/video.html
+++ b/html/_/video.html
@@ -41,7 +41,7 @@ crossorigin=""/>
         <div class="row m-0">
           <div class="col-12 text-center m-0" style="background-color: red;">
             <h1 class="titlemodalvideo">Découvrir ScenTree</h1>
-            <h2 class="text-justify titlemodalvideo2">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
+            <h2 class="titlemodalvideo2">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
           </div>
         </div>
       </div>
