--- a/html/_/video.html
+++ b/html/_/video.html
@@ -36,10 +36,9 @@ crossorigin=""/>
 <div class="modal fade in  my-modal show_modal_at_start go_to_main_page_after_closing_modal" tabindex="-1" role="dialog" id="Vidéo">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-      <div class="modal-header" style="background-color: blue;">
-        <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="closevideo"><span aria-hidden="true">&times;</span></button>
+      <div class="modal-header">
         <div class="row m-0">
-          <div class="col-12 text-center m-0" style="background-color: red;">
+          <div class="col-12 text-center m-0">
             <h1 class="titlemodalvideo">Découvrir ScenTree</h1>
             <h2 class="titlemodalvideo2">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
           </div>
