--- a/html/_/video.html
+++ b/html/_/video.html
@@ -39,8 +39,14 @@ crossorigin=""/>
       <div class="modal-header">
         <div class="row m-0">
           <div class="col-12 text-center m-0">
-            <h1 class="titlemodalvideo">Découvrir ScenTree</h1>
-            <h2 class="titlemodalvideo2">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
+            <h1 class="titlemodalvideo">
+              <span lang="fr">Découvrir ScenTree</span>
+              <span lang="en">Disccover ScenTree</span>
+            </h1>
+            <h2 class="titlemodalvideo2">
+              <span lang="fr">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</span>
+              <span lang="en">Created in 2019, discover all the functionalities of ScenTree, the new classification of perfume raw materials.</span>
+            </h2>
           </div>
         </div>
       </div>
