--- a/html/_/support.html
+++ b/html/_/support.html
@@ -180,12 +180,12 @@ crossorigin=""/>
 <div class="row">
   <div class="col-12 col-xs-12">
     <div class="row"> 
-      <div class="col-6 col-xs-12 entreprise">
+      <div class="col-6 col-xs-12 entreprise" style="background-color: blue;">
         <h2 class="mt-3 m-0 p-0 text-center" style="font-size: 1em;">
           <span lang="fr"><b class="bplus"><i>Sociétés partenaires</i></b> </span>
           <span lang="en"><b class="bplus"><i>Partner companies</i></b> </span>
         </h2>
-        <p class="col-12 col-xs-12 mt-3">
+        <p class="col-12 mt-3">
            <a class="btn offset-1 col-4 col-xs-12 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
         </p>
       </div>
