--- a/html/_/support.html
+++ b/html/_/support.html
@@ -181,7 +181,7 @@ crossorigin=""/>
   <div class="col-12 col-xs-12">
     <div class="row"> 
       <div class="col-6 col-xs-12 entreprise" style="background-color: blue;">
-        <div class="row mt-3 m-0 p-0" style="background-color: green;">
+        <div class="row mt-3 m-0 p-0 text-center" style="background-color: green;">
           <h2 class="text-center" style="font-size: 1em;">
             <span lang="fr"><b class="bplus"><i>Sociétés partenaires</i></b> </span>
             <span lang="en"><b class="bplus"><i>Partner companies</i></b> </span>
