--- a/html/_/support.html
+++ b/html/_/support.html
@@ -187,9 +187,11 @@ crossorigin=""/>
             <span lang="en"><b class="bplus"><i>Partner companies</i></b> </span>
           </h2>
         </div>
-        <p class="col-12 mt-3">
-           <a class="btn offset-1 col-4 col-xs-12 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
-        </p>
+        <div class="mt-3 m-0 p-0" style="background-color: white;">
+          <p class="col-12 mt-3">
+             <a class="btn offset-1 col-4 col-xs-12 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
+          </p>
+        </div>
       </div>
 
       <div class="col-6 col-xs-12 particulier">
