--- a/html/_/support.html
+++ b/html/_/support.html
@@ -187,8 +187,24 @@ crossorigin=""/>
             <span lang="en"><b class="bplus"><i>Partner companies</i></b> </span>
           </h2>
         </div>
+        
         <div class="mt-3 m-0 p-0 col-12 sponsors" style="background-color: white;">
-          <a class="btn offset-1 col-4 logosupporter" role="button" href="../supporters/cinquieme_sens.html">
+          <a class="btn offset-1 col-4 logopremium" role="button" href="../supporters/cinquieme_sens.html">
+            <img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
+          </a>
+          <a class="btn offset-2 col-4 logopremium" role="button" href="../supporters/cinquieme_sens.html">
+            <img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
+          </a>
+        </div>
+
+        <div class="mt-3 m-0 p-0 col-12 sponsors" style="background-color: white;">
+          <a class="btn offset-2 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
+            <img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
+          </a>
+          <a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
+            <img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
+          </a>
+          <a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
             <img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
           </a>
         </div>
