--- a/html/_/index.html
+++ b/html/_/index.html
@@ -447,7 +447,7 @@ crossorigin=""/>
             <span lang="en">Extraction process <sup class="fas fa-question-circle iconetab" title="Harvesting and extraction methods of the raw material."></sup> :</span>
           </h2>
           <br>
-          <h3 class="textitem d-inline">
+          <h3 class="textitem2 d-inline">
             <span id="modalbody-methode"></span>
           </h3>
         </p>
